ajustando a div do Laboratório

--- a/sobre.html
+++ b/sobre.html
@@ -1,9 +1,8 @@
 <html>
-  <title>Assuntos Lab</title>
+  <title>Laboratório</title>
   <body>
     <ul>
-      <li>Git</li>
-      <li>GitHub</li>
+      <div>Sobre Laboratório do Git</div>
     </ul>
   </body>
 </html>
