criando commit sem staging

--- a/home.html
+++ b/home.html
@@ -5,7 +5,10 @@
       <li>Git</li>
       <li>GitHub</li>
       <li>DDD</li>
+      <li>utomated tests</li>
       <li>Docker e Kurbunetes</li>
+      <li>Ansible</li>
+      <li>Terraform</li>
     </ul>
   </body>
 </html>
