--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <li>Git</li>
       <li>GitHub</li>
       <li>Docker</li>
+      <li>Engenharia de Software</li>
     </ul>
   </body>
 </html>
